--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
   <link href="https://fonts.googleapis.com/css?family=Asap:400,700&display=swap" rel="stylesheet">
-  <title>RSS Demo</title>
+  <title>Upwork RSS Reader</title>
 </head>
 
 <body>
